# VoiceIM

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
voiceim/: __init__.py  config.py  main.py  recorder.py  sound.py  transcriber.py  typer.py
