[project]
name = "voiceim"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pynput",
    "sounddevice",
    "soundfile",
    "httpx[socks]",
    "python-dotenv",
]

[project.scripts]
voiceim = "voiceim.main:main"

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
